# schemasniff

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  ci.yml  deny.toml  eslint.config.mjs  package-lock.json  package-override.json  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
demo/: index.html  main.ts  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_csv.rs  fuzz_deep_json.rs  fuzz_json.rs  fuzz_nul_nonutf8.rs  fuzz_oversized.rs
scripts/: gen-bench-files.mjs  postbuild.mjs
src/: csv_parser.rs  hll.rs  index.ts  json_parser.rs  lib.rs  security.rs  types.ts
